--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "hapi": "^16.5.0",
+    "inert": "^4.2.1",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
-    "uglify": "^0.1.5"
+    "uglify": "^0.1.5",
+    "vision": "^4.1.1"
   }
 }
